Fix jumpy subclass images

--- a/style/component/inventory/ItemSubclassTooltip.scss
+++ b/style/component/inventory/ItemSubclassTooltip.scss
@@ -42,6 +42,7 @@
 		
 		&-image {
 			width: 100%;
+			aspect-ratio: 21/6;
 		}
 		
 		&-name {
@@ -51,7 +52,7 @@
 			letter-spacing: 0;
 			align-self: end;
 			padding: var(--tooltip-padding);
-			z-index: 1;
+			z-index: 2;
 		}
 		
 		&::after {
@@ -60,6 +61,8 @@
 			inset: 0;
 			grid-area: stack;
 			background: linear-gradient(to bottom, transparent 35%, #0003 75%, #000c);
+			z-index: 1;
+			position: relative;
 		}
 	}
 	
